Changed the way ArrayList is created in test case due to a problem in another ide which is required per project request